[tool.poetry]
name = "wannabuythis"
version = "0.1.0"
description = ""
authors = ["Desunovu <desunovu@gmail.com>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
