[project]
name = ""
version = "0.0.1"
description = ""
authors = [{ name = "Desunovu", email = "desunovu@gmail.com" }]
requires-python = ">=3.12,<3.13"
readme = "../README.md"
license = "AGPL-3.0"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "SQLAlchemy>=2.0.30,<3",
    "pytest>=8.2.0,<9",
    "psycopg2-binary>=2.9.9,<3",
    "alembic>=1.13.1,<2",
    "pyjwt>=2.8.0,<3",
    "slowapi>=0.1.9,<0.2",
    "redis>=5.0.7,<6",
    "fakeredis>=2.23.3,<3",
    "pydantic-settings>=2.11.0,<3",
    "passlib[argon2]>=1.7.4,<2",
    "zxcvbn>=4.5.0,<5",
]

[dependency-groups]
dev = [
    "setuptools>=69.5.1,<70",
    "ruff>=0.5.1,<0.6",
    "isort>=5.13.2,<6",
    "ssort>=0.13.0,<0.14",
    "pydeps>=3.0.1,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
